--- a/src/partials/plug.html
+++ b/src/partials/plug.html
@@ -1,4 +1,4 @@
-<section class="container">
+<section class="shoping-list">
   <h2 class="main-header">
     Shopping <span class="main-header-accent">List</span>
   </h2>
@@ -64,6 +64,6 @@
     </picture>
   </div>
   <span class="loader is-hidden"></span>
-  <ul class="shopping-list"></ul>
+  <ul class="shopping-list-selector"></ul>
   <div id="pagination" class="tui-pagination is-hidden"></div>
 </section>
