--- a/src/partials/support.html
+++ b/src/partials/support.html
@@ -1,4 +1,4 @@
-<section class="section-support">
+<section class="section-support support-none">
   <div class="section-support-container">
     <h2 class="section-support-title">
       Support Ukraine<svg
