--- a/src/style/layout/modal.css
+++ b/src/style/layout/modal.css
@@ -12,7 +12,7 @@
   box-sizing: border-box;
   margin: 0 auto;
   padding: 24px 40px;
-  width: 335px;
+  min-width: 335px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(0.8);
