mobile menu Auth...

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -35,7 +35,7 @@
         <use href="./images/sprite.svg#icon-align-left"></use>
       </svg>
     </button>
-    <div class="signup-container">
+    <div class="signup-container ">
       <a href="./login.html" class="signup-link" id="signup-link">
         <svg class="user-icon" width="37" height="37" aria-label="User img space">
           <use href="./images/sprite.svg#user"></use>
@@ -46,7 +46,7 @@
         </svg>
       </a>
     </div>
-    <div class="profile-container">
+    <div class="profile-container is-hidden">
       <div class="logout-container ">
       <a href="#" class="signup-link" id="signup-link">
         <span class="signup-text"> Log out </span>
