--- a/src/partials/plug.html
+++ b/src/partials/plug.html
@@ -6,62 +6,19 @@
     <p class="shopping-plug-text">
       This page is empty, add some books and proceed to order.
     </p>
-    <picture>
-      <source
-        media="(min-width: 1440px)"
-        srcset="
-          ./images/shopping-list/books-shopping-list.webp    1x,
-          ./images/shopping-list/books-shopping-list@2x.webp 2x
-        "
-        type="image/webp"
-      />
-      <source
-        media="(min-width: 1440px)"
-        srcset="
-          ./images/shopping-list/books-shopping-list.png    1x,
-          ./images/shopping-list/books-shopping-list@2x.png 2x
-        "
-        type="image/png"
-      />
-      <source
-        media="(min-width: 768px)"
-        srcset="
-          ./images/shopping-list/books-shopping-list.webp    1x,
-          ./images/shopping-list/books-shopping-list@2x.webp 2x
-        "
-        type="image/webp"
-      />
-      <source
-        media="(min-width: 768px)"
-        srcset="
-          ./images/shopping-list/books-shopping-list.png    1x,
-          ./images/shopping-list/books-shopping-list@2x.png 2x
-        "
-        type="image/png"
-      />
-      <source
-        media="(max-width: 767.98px)"
-        srcset="
-          ./images/shopping-list/books-shopping-list.webp    1x,
-          ./images/shopping-list/books-shopping-list@2x.webp 2x
-        "
-        type="image/webp"
-      />
-      <source
-        media="(min-width: 767.98px)"
-        srcset="
-          ./images/shopping-list/books-shopping-list.png    1x,
-          ./images/shopping-list/books-shopping-list@2x.png 2x
-        "
-        type="image/png"
-      />
-      <img
-        class="shopping-plug-img"
-        src="./images/shopping-list/books-shopping-list.png"
-        alt="Shopping list is empty"
-        loading="lazy"
-      />
-    </picture>
+    <img
+      class="shopping-plug-img"
+      src="./images/shopping-list/books-shopping-list.png"
+      alt="Shopping list is empty"
+      srcset="
+        ./images/shopping-list/books-shopping-list.webp    1x,
+        ./images/shopping-list/books-shopping-list@2x.webp 2x,
+        ./images/shopping-list/books-shopping-list.png     1x,
+        ./images/shopping-list/books-shopping-list@2x.png  2x
+      "
+      sizes="(max-width: 322px)"
+      loading="lazy"
+    />
   </div>
   <span class="loader is-hidden"></span>
   <ul class="shopping-list-selector"></ul>
