--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -15,8 +15,7 @@
             <a href="./index.html" id="home-link" class="nav-link link">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link shop-link link" href="./shoppinglist.html" id="shopping-list-link"
-              target="_self">Shopping List
+            <a class="nav-link link" href="./shoppinglist.html" id="shopping-list-link">Shopping List
               <svg class="logo-icon" width="20" height="20" aria-label="logotype">
                 <use href="./images/sprite.svg#icon-uil-cart"></use>
               </svg>
@@ -48,28 +47,29 @@
     </div>
     <div class="profile-container is-hidden">
       <div class="logout-container ">
-      <a href="#" class="signup-link" id="signup-link">
-        <span class="signup-text"> Log out </span>
-        <svg width="20" height="20" aria-label="Sign up Icon">
-          <use href="./images/sprite.svg#arrow-right"></use>
-        </svg>
-      </a>
-    </div>
+        <a href="#" class="signup-link" id="signup-link">
+          <span class="signup-text"> Log out </span>
+          <svg width="20" height="20" aria-label="Sign up Icon">
+            <use href="./images/sprite.svg#arrow-right"></use>
+          </svg>
+        </a>
+      </div>
       <a class="profile-link" href="#">
-        <img class="profile-img" id="userImage" src="./images/profil-img/ellipse-3.webp" alt="User profile image" srcset="
+        <img class="profile-img" id="userImage" src="./images/profil-img/ellipse-3.webp" alt="User profile image"
+          srcset="
               ./images/profil-img/ellipse-3.webp    1x,
               ./images/profil-img/ellipse-3@2x.webp 2x
             " />
-            <svg class="user-icon" width="37" height="37" aria-label="User img space">
-    <use href="./images/sprite.svg#user"></use>
-  </svg>
+        <svg class="user-icon" width="37" height="37" aria-label="User img space">
+          <use href="./images/sprite.svg#user"></use>
+        </svg>
         <span class="profile-text">Stephen</span>
         <svg class="burger-icon" width="23" height="26" aria-label="profile down arrow">
           <use href="./images/sprite.svg#icon-fi-ss-caret-down"></use>
         </svg>
       </a>
     </div>
-    
+
   </div>
   </div>
 </header>
