--- a/src/partials/support.html
+++ b/src/partials/support.html
@@ -1,4 +1,4 @@
-<section class="section-support support-none">
+<section class="section-support">
   <div class="section-support-container">
     <h2 class="section-support-title">
       Support Ukraine<svg class="logo-ukr" width="20" height="32" aria-label="Emblem of Ukraine">
