--- a/src/style/index.css
+++ b/src/style/index.css
@@ -7,12 +7,11 @@
 @import './layout/all-categories.css';
 @import './layout/header.css';
 @import './layout/main.css';
-@import './layout/loader.css';
 @import './layout/login.css';
 @import './layout/modal.css';
 @import './layout/plug.css';
 @import './layout/shopping.css';
 @import './layout/support.css';
 @import './layout/clock.css';
-@import './layout/loader.css';
 @import './layout/scroll-up-btn.css';
+@import './layout/pagination.css';
