--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,7 @@
 <header class="header">
   <div class="nav-container">
     <div class="logo-nav">
-      <a href="" class="logo">
+      <a href="./index.html" class="logo">
         <svg class="logo-icon" width="24" height="24" aria-label="logotype">
           <use href="./images/sprite.svg#icon-logo"></use>
         </svg>
