--- a/src/style/utils/variables.css
+++ b/src/style/utils/variables.css
@@ -23,7 +23,7 @@
   );
   --shop: grayscale(100%);
   --shop-book: grayscale(100%);
-  --shop-hover-book: drop-shadow(0px 3px 3px rgba(0, 0, 0, 0.35));
+  --shop-hover: drop-shadow(0px 3px 3px rgba(0, 0, 0, 0.35));
   --shop-hover-book: drop-shadow(0px 3px 3px rgba(0, 0, 0, 0.35));
 
   --radial-gradient: radial-gradient(
