--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -1,5 +1,5 @@
-<div class="modal-backdrop">
-  <div class="modal-shown is-hidden">
+<div class="modal-backdrop modal-hidden">
+  <div class="modal-shown">
     <button class="login-btn close" type="button">
       <svg class="login-btn-icon" width="28" height="28">
         <use href="./images/sprite.svg#icon-x-close"></use>
