loader + checker html

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -47,7 +47,7 @@
     </div>
     <div class="profile-container is-hidden">
       <div class="logout-container ">
-        <a href="#" class="signup-link" id="signup-link">
+        <a href="#" class="signup-link">
           <span class="signup-text"> Log out </span>
           <svg width="20" height="20" aria-label="Sign up Icon">
             <use href="./images/sprite.svg#arrow-right"></use>
