--- a/src/style/index.css
+++ b/src/style/index.css
@@ -15,4 +15,4 @@
 @import './layout/clock.css';
 @import './layout/scroll-up-btn.css';
 @import './layout/pagination.css';
-@import './layout/login.css';
+@import './layout/loader.css';
