--- a/src/partials/plug.html
+++ b/src/partials/plug.html
@@ -1,4 +1,7 @@
 <section class="shoping-list">
+  <div class="loader-backdrop is-hidden">
+    <span class="loader"></span>
+  </div>
   <h2 class="main-header">
     Shopping <span class="main-header-accent">List</span>
   </h2>
@@ -6,21 +9,17 @@
     <p class="shopping-plug-text">
       This page is empty, add some books and proceed to order.
     </p>
-    <img
-      class="shopping-plug-img"
-      src="./images/shopping-list/books-shopping-list.png"
-      alt="Shopping list is empty"
-      srcset="
-        ./images/shopping-list/books-shopping-list.webp    1x,
-        ./images/shopping-list/books-shopping-list@2x.webp 2x,
-        ./images/shopping-list/books-shopping-list.png     1x,
-        ./images/shopping-list/books-shopping-list@2x.png  2x
-      "
-      sizes="(max-width: 322px)"
-      loading="lazy"
-    />
+    <picture>
+      <source srcset="./images/shopping-list/books-shopping-list.webp 1x,
+        ./images/shopping-list/books-shopping-list@2x.webp 2x" type="image/webp">
+      <source srcset="./images/shopping-list/books-shopping-list.png 1x,
+        ./images/shopping-list/books-shopping-list@2x.png 2x">
+      <img class="shopping-plug-img" src="./images/shopping-list/books-shopping-list.png" alt="Shopping list is empty"
+        loading="lazy" />
+    </picture>
+
   </div>
   <span class="loader is-hidden"></span>
   <ul class="shopping-list-selector"></ul>
-  <div id="pagination" class="tui-pagination is-hidden"></div>
+  <div id="pagination" class="tui-pagination"></div>
 </section>
