add scroll-up to shoping-list

--- a/src/partials/plug.html
+++ b/src/partials/plug.html
@@ -1,4 +1,5 @@
 <section class="shoping-list">
+  <button class="button-scroll-up" type="button" id="button-scroll-up">&#5123;</button>
   <div class="loader-backdrop is-hidden">
     <span class="loader"></span>
   </div>
@@ -21,5 +22,5 @@
   </div>
   <span class="loader is-hidden"></span>
   <ul class="shopping-list-selector"></ul>
-  <div id="pagination" class="tui-pagination"></div>
+  <!-- <div id="pagination" class="tui-pagination"></div> -->
 </section>
