--- a/src/style/layout/login.css
+++ b/src/style/layout/login.css
@@ -60,8 +60,7 @@
 }
 .login-btn:hover,
 .login-btn:focus {
-  transform: rotate(360deg);
-  scale: 1.1;
+  transform: rotate(360deg) scale(1.1);
   outline: 2px solid var(--color-black);
 }
 
@@ -72,8 +71,7 @@
   }
   .login-btn:hover,
   .login-btn:focus {
-    transform: rotate(360deg);
-    scale: 1.3;
+    transform: rotate(360deg) scale(1.3);
     outline: 3px solid var(--color-black);
   }
 }
@@ -90,8 +88,6 @@
   }
 }
 
-.login-form {
-}
 .login-field-container {
   display: flex;
   flex-direction: column;
