--- a/src/style/layout/support.css
+++ b/src/style/layout/support.css
@@ -21,7 +21,7 @@
   color: var(--color-white-all-time, #ffffff);
   font-size: 22px;
   font-weight: 700;
-  line-height: 1, 09;
+  line-height: 1.09;
   letter-spacing: -0.88px;
 }
 .section-support-list {
@@ -56,7 +56,7 @@
 .section-support-png:hover,
 .section-support-png:focus {
   filter: none;
-  scale: 1.2;
+  transform: scale(1.2);
 }
 
 .logo-ukr {
