height in img support

--- a/src/partials/support.html
+++ b/src/partials/support.html
@@ -1,302 +1,173 @@
 <section class="section-support">
   <div class="section-support-container">
     <h2 class="section-support-title">
-      Support Ukraine<svg
-        class="logo-ukr"
-        width="20"
-        height="32"
-        aria-label="Emblem of Ukraine"
-      >
+      Support Ukraine<svg class="logo-ukr" width="20" height="32" aria-label="Emblem of Ukraine">
         <use href="./images/sprite.svg#gerb"></use>
       </svg>
     </h2>
     <ul class="section-support-list list-support">
       <li class="section-support-list-item first-li-el">
-        <a
-          class="section-support-link link"
-          target="_blank"
-          rel="noopener noreferrer"
-          href="https://www.savethechildren.net/what-we-do/emergencies/ukraine-crisis"
-          >01
+        <a class="section-support-link link" target="_blank" rel="noopener noreferrer"
+          href="https://www.savethechildren.net/what-we-do/emergencies/ukraine-crisis">01
           <picture>
-            <source
-              srcset="
+            <source srcset="
                 ./images/support/mobile/save_the_children_mobil.webp    1x,
                 ./images/support/mobile/save_the_children_mobil_2x.webp 2x
-              "
-              type="image/webp"
-            />
-            <source
-              srcset="
+              " type="image/webp" />
+            <source srcset="
                 ./images/support/mobile/save_the_children_mobil.png    1x,
                 ./images/support/mobile/save_the_children_mobil_2x.png 2x
-              "
-              type="image/png"
-            />
-            <img
-              class="section-support-png"
-              src="./images/support/mobile/save_the_children_mobil.png"
-              alt="Save the Children Logo"
-            />
+              " type="image/png" />
+            <img class="section-support-png" src="./images/support/mobile/save_the_children_mobil.png"
+              alt="Save the Children Logo" height="32" />
           </picture>
         </a>
       </li>
       <li class="section-support-list-item second-li-el">
-        <a
-          class="section-support-link link"
-          target="_blank"
-          rel="noopener noreferrer"
-          href="https://www.projecthope.org/country/ukraine/"
-          >02
+        <a class="section-support-link link" target="_blank" rel="noopener noreferrer"
+          href="https://www.projecthope.org/country/ukraine/">02
           <picture>
-            <source
-              srcset="
+            <source srcset="
                 ./images/support/mobile/project_hope_mobil.webp    1x,
                 ./images/support/mobile/project_hope_mobil_2x.webp 2x
-              "
-              type="image/webp"
-            />
-            <source
-              srcset="
+              " type="image/webp" />
+            <source srcset="
                 ./images/support/mobile/project_hope_mobil.png    1x,
                 ./images/support/mobile/project_hope_mobil_2x.png 2x
-              "
-              type="image/png"
-            />
-            <img
-              class="section-support-png"
-              src="./images/support/mobile/project_hope_mobil.png"
-              alt="Project HOPE Logo"
-            />
+              " type="image/png" />
+            <img class="section-support-png" src="./images/support/mobile/project_hope_mobil.png"
+              alt="Project HOPE Logo" height="32" />
           </picture>
         </a>
       </li>
 
       <li class="section-support-list-item third-li-el">
-        <a
-          class="section-support-link link"
-          target="_blank"
-          rel="noopener noreferrer"
-          href="https://internationalmedicalcorps.org/country/ukraine/"
-          >03
+        <a class="section-support-link link" target="_blank" rel="noopener noreferrer"
+          href="https://internationalmedicalcorps.org/country/ukraine/">03
           <picture>
-            <source
-              srcset="
+            <source srcset="
                 ./images/support/mobile/international_medical_corps_mobil.webp    1x,
                 ./images/support/mobile/international_medical_corps_mobil_2x.webp 2x
-              "
-              type="image/webp"
-            />
-            <source
-              srcset="
+              " type="image/webp" />
+            <source srcset="
                 ./images/support/mobile/international_medical_corps_mobil.png    1x,
                 ./images/support/mobile/international_medical_corps_mobil_2x.png 2x
-              "
-              type="image/png"
-            />
-            <img
-              class="section-support-png"
-              src="./images/support/mobile/international_medical_corps_mobil.png"
-              alt="International Medical Corps Logo"
-            />
+              " type="image/png" />
+            <img class="section-support-png" src="./images/support/mobile/international_medical_corps_mobil.png"
+              alt="International Medical Corps Logo" height="32" />
           </picture>
         </a>
       </li>
 
       <li class="section-support-list-item">
-        <a
-          class="section-support-link link"
-          target="_blank"
-          rel="noopener noreferrer"
-          href="https://www.razomforukraine.org/"
-          >04
+        <a class="section-support-link link" target="_blank" rel="noopener noreferrer"
+          href="https://www.razomforukraine.org/">04
           <picture>
-            <source
-              srcset="
+            <source srcset="
                 ./images/support/mobile/razom_mobil.webp    1x,
                 ./images/support/mobile/razom_mobil_2x.webp 2x
-              "
-              type="image/webp"
-            />
-            <source
-              srcset="
+              " type="image/webp" />
+            <source srcset="
                 ./images/support/mobile/razom_mobil.png    1x,
                 ./images/support/mobile/razom_mobil_2x.png 2x
-              "
-              type="image/png"
-            />
-            <img
-              class="section-support-png"
-              src="./images/support/mobile/razom_mobil.png"
-              alt="RAZOM Logo"
-            />
+              " type="image/png" />
+            <img class="section-support-png" src="./images/support/mobile/razom_mobil.png" alt="RAZOM Logo"
+              height="32" />
           </picture>
         </a>
       </li>
       <li class="section-support-list-item">
-        <a
-          class="section-support-link link"
-          target="_blank"
-          rel="noopener noreferrer"
-          href="https://www.actionagainsthunger.org/location/europe/ukraine/"
-          >05
+        <a class="section-support-link link" target="_blank" rel="noopener noreferrer"
+          href="https://www.actionagainsthunger.org/location/europe/ukraine/">05
           <picture>
-            <source
-              srcset="
+            <source srcset="
                 ./images/support/mobile/action_against_hunger_mobil.webp    1x,
                 ./images/support/mobile/action_against_hunger_mobil_2x.webp 2x
-              "
-              type="image/webp"
-            />
-            <source
-              srcset="
+              " type="image/webp" />
+            <source srcset="
                 ./images/support/mobile/action_against_hunger_mobil.png    1x,
                 ./images/support/mobile/action_against_hunger_mobil_2x.png 2x
-              "
-              type="image/png"
-            />
-            <img
-              class="section-support-png"
-              src="./images/support/mobile/action_against_hunger_mobil.png"
-              alt="Action against hunger Logo"
-            />
+              " type="image/png" />
+            <img class="section-support-png" src="./images/support/mobile/action_against_hunger_mobil.png"
+              alt="Action against hunger Logo" height="32" />
           </picture>
         </a>
       </li>
 
       <li class="section-support-list-item">
-        <a
-          class="section-support-link link"
-          target="_blank"
-          rel="noopener noreferrer"
-          href="https://prytulafoundation.org/en"
-          >06
+        <a class="section-support-link link" target="_blank" rel="noopener noreferrer"
+          href="https://prytulafoundation.org/en">06
           <picture>
-            <source
-              srcset="
+            <source srcset="
                 ./images/support/mobile/serhiy_prytula_charity_foundation_mobil.webp    1x,
                 ./images/support/mobile/serhiy_prytula_charity_foundation_mobil_2x.webp 2x
-              "
-              type="image/webp"
-            />
-            <source
-              srcset="
+              " type="image/webp" />
+            <source srcset="
                 ./images/support/mobile/serhiy_prytula_charity_foundation_mobil.png    1x,
                 ./images/support/mobile/serhiy_prytula_charity_foundation_mobil_2x.png 2x
-              "
-              type="image/png"
-            />
-            <img
-              class="section-support-png"
-              src="./images/support/mobile/serhiy_prytula_charity_foundation_mobil.png"
-              alt="Serhiy Prytula Charity FoundationLogo"
-            />
+              " type="image/png" />
+            <img class="section-support-png" src="./images/support/mobile/serhiy_prytula_charity_foundation_mobil.png"
+              alt="Serhiy Prytula Charity FoundationLogo" height="32" />
           </picture>
         </a>
       </li>
 
       <li class="section-support-list-item is-hidden seven-li-el">
-        <a
-          class="section-support-link link"
-          target="_blank"
-          rel="noopener noreferrer"
-          href="https://www.msf.org/ukraine"
-          >07
+        <a class="section-support-link link" target="_blank" rel="noopener noreferrer"
+          href="https://www.msf.org/ukraine">07
           <picture>
-            <source
-              srcset="
+            <source srcset="
                 ./images/support/mobile/medicins_sans_frontieres_mobil.webp    1x,
                 ./images/support/mobile/medicins_sans_frontieres_mobil_2x.webp 2x
-              "
-              type="image/webp"
-            />
-            <source
-              srcset="
+              " type="image/webp" />
+            <source srcset="
                 ./images/support/mobile/medicins_sans_frontieres_mobil.png    1x,
                 ./images/support/mobile/medicins_sans_frontieres_mobil_2x.png 2x
-              "
-              type="image/png"
-            />
-            <img
-              class="section-support-png"
-              src="./images/support/mobile/medicins_sans_frontieres_mobil.png"
-              alt="Medicins Sans Frontieres Logo"
-            />
+              " type="image/png" />
+            <img class="section-support-png" src="./images/support/mobile/medicins_sans_frontieres_mobil.png"
+              alt="Medicins Sans Frontieres Logo" height="32" />
           </picture>
         </a>
       </li>
 
       <li class="section-support-list-item is-hidden eight-li-el">
-        <a
-          class="section-support-link link"
-          target="_blank"
-          rel="noopener noreferrer"
-          href="https://www.wvi.org/emergencies/ukraine"
-          >08
+        <a class="section-support-link link" target="_blank" rel="noopener noreferrer"
+          href="https://www.wvi.org/emergencies/ukraine">08
           <picture>
-            <source
-              srcset="
+            <source srcset="
                 ./images/support/mobile/world_vision_mobil.webp    1x,
                 ./images/support/mobile/world_vision_mobil_2x.webp 2x
-              "
-              type="image/webp"
-            />
-            <source
-              srcset="
+              " type="image/webp" />
+            <source srcset="
                 ./images/support/mobile/world_vision_mobil.png    1x,
                 ./images/support/mobile/world_vision_mobil_2x.png 2x
-              "
-              media="(max-width: 768px)"
-              type="image/png"
-            />
-            <img
-              class="section-support-png"
-              src="./images/support/mobile/world_vision_mobil.png"
-              alt="World vision Logo"
-            />
+              " media="(max-width: 768px)" type="image/png" />
+            <img class="section-support-png" src="./images/support/mobile/world_vision_mobil.png"
+              alt="World vision Logo" height="32" />
           </picture>
         </a>
       </li>
 
       <li class="section-support-list-item is-hidden ninth-li-el">
-        <a
-          class="section-support-link link"
-          target="_blank"
-          rel="noopener noreferrer"
-          href="https://u24.gov.ua/uk"
-          >09
+        <a class="section-support-link link" target="_blank" rel="noopener noreferrer" href="https://u24.gov.ua/uk">09
           <picture>
-            <source
-              srcset="
+            <source srcset="
                 ./images/support/mobile/united24_mobil.webp    1x,
                 ./images/support/mobile/united24_mobil_2x.webp 2x
-              "
-              type="image/webp"
-            />
-            <source
-              srcset="
+              " type="image/webp" />
+            <source srcset="
                 ./images/support/mobile/united24_mobil.png    1x,
                 ./images/support/mobile/united24_mobil_2x.png 2x
-              "
-              type="image/png"
-            />
-            <img
-              class="section-support-png"
-              src="./images/support/mobile/united24_mobil.png"
-              alt="UNITED24 Logo"
-            />
+              " type="image/png" />
+            <img class="section-support-png" src="./images/support/mobile/united24_mobil.png" alt="UNITED24 Logo"
+              height="32" />
           </picture>
         </a>
       </li>
     </ul>
 
     <button class="section-support-btn scroll-down-btn" type="button">
-      <svg
-        class="scroll-down"
-        width="20"
-        height="20"
-        aria-label="Scroll down logo"
-      >
+      <svg class="scroll-down" width="20" height="20" aria-label="Scroll down logo">
         <use href="./images/sprite.svg#arrow-small-left-down"></use>
       </svg>
     </button>
