--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -47,19 +47,19 @@
     </div>
     <div class="profile-container is-hidden">
       <div class="logout-container ">
-        <a href="#" class="signup-link">
+        <div class="signup-link space-btw">
           <span class="signup-text"> Log out </span>
           <svg width="20" height="20" aria-label="Sign up Icon">
             <use href="./images/sprite.svg#arrow-right"></use>
           </svg>
-        </a>
+        </div>
       </div>
-      <a class="profile-link" href="#">
+      <div class="profile-link">
         <img class="profile-img" id="userImage" src="./images/profil-img/ellipse-3.webp" alt="User profile image"
           srcset="
-              ./images/profil-img/ellipse-3.webp    1x,
-              ./images/profil-img/ellipse-3@2x.webp 2x
-            " />
+                ./images/profil-img/ellipse-3.webp    1x,
+                ./images/profil-img/ellipse-3@2x.webp 2x
+              " />
         <svg class="user-icon" width="37" height="37" aria-label="User img space">
           <use href="./images/sprite.svg#user"></use>
         </svg>
@@ -67,9 +67,7 @@
         <svg class="burger-icon" width="23" height="26" aria-label="profile down arrow">
           <use href="./images/sprite.svg#icon-fi-ss-caret-down"></use>
         </svg>
-      </a>
+      </div>
     </div>
-
-  </div>
   </div>
 </header>
