LAST Fix... i hope

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -64,7 +64,7 @@
           <use href="./images/sprite.svg#user"></use>
         </svg>
         <span class="profile-text">Stephen</span>
-        <svg class="burger-icon" width="23" height="26" aria-label="profile down arrow">
+        <svg class="burger-icon burger-icon-stroke" width="23" height="26" aria-label="profile down arrow">
           <use href="./images/sprite.svg#icon-fi-ss-caret-down"></use>
         </svg>
       </div>
